--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
 /*  your css code here. If applicable */
 #yellow{
-	background-color:yellow;
+	border-style: solid;
+	border-color:green;
+	background:yellow;
 	border-width:1px;
-	border-color:green
 }
-
 #red{
-	background-color:red;
+	background:red;
+	border-style: solid;
+	border-color:black;
 	border-width:1px;
-	border-color:black
+	
 }
-
 #green{
-	background-color:green;
+	background:green;
 	border-width:1px;
-	border-color:yellow
+	border-style: solid;
+	border-color:yellow;
 }
